working default post

--- a/front/src/app/csvgen/csvgen.component.html
+++ b/front/src/app/csvgen/csvgen.component.html
@@ -3,7 +3,7 @@
       <input [(ngModel)]="csvgen.separator" placeholder="separator"/>
     </label>
     <label>TableName:
-        <input [(ngModel)]="csvgen.TableName" placeholder="TableName"/>
+        <input [(ngModel)]="csvgen.tableName" placeholder="TableName"/>
     </label>
     <button class="import"
     (click)="import()">import</button>
