--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+.container {
+    max-width: 500px;
+    margin-top: 50px;
+}
