--- a/front/src/app/file-upload/file-upload.component.html
+++ b/front/src/app/file-upload/file-upload.component.html
@@ -21,5 +21,8 @@
             <button class="btn btn-danger btn-block btn-lg">Create</button>
         </div>
     </form>
+    <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
+        <p style="color: white">Please Wait. </p>  
+    </ngx-spinner>
 
 </div>
