--- a/front/src/app/file-upload/file-upload.component.html
+++ b/front/src/app/file-upload/file-upload.component.html
@@ -1,28 +1,33 @@
-<div class="container">
-    <form [formGroup]="form" (ngSubmit)="submitForm()">
-        <div class="form-group">
-            <input type="file" (change)="uploadFile($event)">
-        </div>
+<h1>Csvgen UI</h1>
+<p></p>
+<div>
+<form [formGroup]="form" (ngSubmit)="submitForm()">
+    <div class="form-group">
+        <input type="file" (change)="uploadFile($event)">
+    </div>
 
-        <div class="form-group input-group-lg">
-            <label>
-                Separator : 
-            <input id="separator" name="separator" class="form-control" placeholder="Separator" formControlName="separator" required>
-            </label>
-        </div>
-        <div class="form-group input-group-lg">
-            <label>
-                Table Name : 
-            <input class="form-control" placeholder="Table Name" formControlName="tableName" required>
-            </label>
-        </div>
+    <div class="form-group input-group-lg">
+        <label>Separator :</label>
+            
+            <input id="separator" name="separator" class="form-control" placeholder=";"
+                formControlName="separator" [ngClass]="{ 'is-invalid': submitted && f.separator.errors }">
+                <div *ngIf="submitted && f.separator.errors" class="invalid-feedback">
+                    <div *ngIf="f.separator.errors.maxlength">Separator must 1 character</div>
+                </div>
 
-        <div class="form-group">
-            <button class="btn btn-danger btn-block btn-lg">Create</button>
-        </div>
-    </form>
-    <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
-        <p style="color: white">Please Wait. </p>  
-    </ngx-spinner>
+    </div>
+    <div class="form-group input-group-lg">
+        <label>Table Name :</label>
+            
+            <input class="form-control" placeholder="Table.Name" formControlName="tableName" [ngClass]="{ 'is-invalid': submitted && f.tableName.errors }">
+        
+    </div>
 
+    <div class="form-group">
+        <button class="btn btn-danger btn-block btn-lg">Create</button>
+    </div>
+</form>
 </div>
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+    <p style="color: white">Please Wait. </p>
+</ngx-spinner>
