--- a/front/src/app/file-upload/file-upload.component.html
+++ b/front/src/app/file-upload/file-upload.component.html
@@ -3,7 +3,7 @@
 <div>
 <form [formGroup]="form" (ngSubmit)="submitForm()">
     <div class="form-group">
-        <input type="file" (change)="uploadFile($event)">
+        <input #inputFile type="file" (change)="uploadFile($event)">
     </div>
 
     <div class="form-group input-group-lg">
