Add Drag and drop

--- a/front/src/app/file-upload/file-upload.component.html
+++ b/front/src/app/file-upload/file-upload.component.html
@@ -2,10 +2,25 @@
 <p></p>
 <div>
 <form [formGroup]="form" (ngSubmit)="submitForm()">
-    <div class="form-group">
-        <input #inputFile type="file" (change)="uploadFile($event)">
+    <div *ngIf="file == null" class="form-group dropzone" appDnd (fileDropped)="onDrop($event)">
+        <input class="inputFile" #inputFile type="file" id="file" (change)="fromBrowser($event)">
+        <img src="assets/img/upload.svg" alt="">
+        <h3>Drag and drop file here</h3>
+        <h3>or</h3>
+        <label class="inputFileLabel" for="inputFile">Browse for file</label>
     </div>
-
+    <div *ngIf="file != null" class="single-file" >
+        <img src="assets/img/file.svg" width="45px" alt="file">
+        <div class="info">
+          <h4 class="name">
+            {{ file?.name }}
+          </h4>
+          <p class="size">
+            {{ formatBytes(file?.size) }}
+          </p></div>
+          <img src="assets/img/delete.svg" class="delete" width="20px" alt="x" (click)="deleteFile()">
+    </div>
+    <p></p>
     <div class="form-group input-group-lg">
         <label>Separator :</label>
             
